TestCases/Errors/Haversine/observations/sst/win_09_obs.spm
obs r14-c5 0.000461435705690651
obs r15-c5 0.000278815487696841
obs r16-c5 0.000112930547713156
obs r14-c6 0.000316572900940361
obs r15-c6 9.99047362276464e-05
obs r16-c6 0.000121670901225944
obs r14-c7 8.41184387617766e-05
obs r15-c7 1e-08
obs r14-c8 0.000499458572622204
obs r14-c9 0.000336360578540195
obs r13-c10 0.000476190476190476
obs r14-c10 0.000654761904761905
obs r3-c11 0.006
obs r4-c11 0.0141666666666667
obs r5-c11 0.000806451612903226
obs r4-c12 0.0160710653445207
obs r3-c13 0.0223636363636364
obs r4-c13 0.0233333333333333
obs r5-c13 0.0211541739635966
obs r5-c14 0.0154556760850319
obs r5-c15 0.021573140926207
obs r6-c15 0.0238099862323593
obs r6-c16 0.0490462962962963
obs r7-c17 0.0189263673072447
obs r8-c17 0.0190963366698661
obs r7-c18 0.0052755376344086
obs r8-c18 0.0229405202640497
obs r9-c18 0.0237847222222222
obs r7-c19 0.00851593700335339
obs r8-c19 0.00620905549586145
obs r9-c19 0.0323888888888889
obs r8-c20 0.00897061811654389
error_value r14-c5 0.2
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r14-c8 0.2
error_value r14-c9 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r3-c11 0.2
error_value r4-c11 0.2
error_value r5-c11 0.2
error_value r4-c12 0.2
error_value r3-c13 0.2
error_value r4-c13 0.2
error_value r5-c13 0.2
error_value r5-c14 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r7-c18 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r7-c19 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r8-c20 0.2
